<resources>
    <string name="app_name">SunLight</string>
    <string name="default_notification_channel_id">default</string>
    <string name="news">Новости</string>
    <string name="home">Главная</string>
    <string name="cabinet">Кабинет</string>
    <string name="purse">Кошелек</string>
    <string name="my_orders">Мои заказы</string>
    <string name="messages">Сообщения</string>
    <string name="login">Вход</string>
    <string name="login_welcome">Добро пожаловать вы входите в систему</string>
    <string name="enter_phone_number">Введите ваш номер телефона:</string>
    <string name="enter_password">Введите ваш пароль:</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="forgot_password"><u>Забыли пароль?</u></string>
    <string name="phone_hint">+7 </string>
    <string name="enter">Войти</string>
    <string name="registration_partner">Регистрация - Партнера</string>
    <string name="step_one">Шаг 1</string>
    <string name="registration">Регистрация</string>
    <string name="personal_data">Персональные данные</string>
    <string name="indicate_your_sponsor">Укажите вашего спонсора:</string>
    <string name="me_">Я сам</string>
    <string name="search_iin_or">Поиск по ИИН или ФИО.</string>
    <string name="partner">Партнер:</string>
    <string name="fullName_partner">Ф.И.О партнера</string>
    <string name="enter_iin">Введите ИИН:</string>
    <string name="iin">ИИН</string>
    <string name="full_name">ФИО</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone_number_two_dots">Номер телефонa:</string>
    <string name="choose_country_two_dots">Выберите страну:</string>
    <string name="choose_country">Выберите страну</string>
    <string name="country_two_dots">Страна:</string>
    <string name="choose_region_two_dots">Выберите область:</string>
    <string name="choose_region">Выберите область</string>
    <string name="region_two_dots">Область:</string>
    <string name="choose_city_two_dots">Выберите город:</string>
    <string name="choose_city">Выберите город</string>
    <string name="city_two_dots">Город:</string>
    <string name="choose_legs">Выберите ветку:</string>
    <string name="left">Левая</string>
    <string name="right">Правая</string>
    <string name="upload_documents">Сканы документов</string>
    <string name="requirements_documents">Требование: желательно jpg-файл с размером <b>1440х1440 пикселей</b>. \nТакже принимает картинки с <b>соотношением сторон 1х1.</b></string>
    <string name="next">Далее</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="status_active">Статус\nАктивности</string>
    <string name="data_registration">Дата регистрации\nпользователя</string>
    <string name="personal_structure">Пользователей\nв структуре</string>
    <string name="referral_reference_right">Реферальная ссылка\nна правую ветку</string>
    <string name="referral_reference_left">Реферальная ссылка\nна левую ветку</string>
    <string name="your_reference_left">Ссылка на левую ветку</string>
    <string name="your_reference_right">Ссылка на правую ветку</string>
    <string name="bottom_register">регистрации</string>
    <string name="registration_referral">Добавить пользователя</string>
    <string name="leader_structure">Лидер структуры</string>
    <string name="leader_five_top">Лидеры структуры до 5 поколения</string>
    <string name="invited">Приглашенные</string>
    <string name="all">Все</string>
    <string name="active">Активен</string>
    <string name="not_active">Не активен</string>
    <string name="status">Статус:</string>
    <string name="bonusnyi_koshelek">Основной \nкошелек</string>
    <string name="koshelek_aktive">Кошелек \nактивности</string>
    <string name="arrow_left">Объем\nлевой ветки</string>
    <string name="arrow_left_week">Объем \nлевой ветки \nна этой неделе</string>
    <string name="koshelek">Кошелек</string>
    <string name="money_withdraw">Снять деньги</string>
    <string name="arrow_right">Объем\nправой ветки</string>
    <string name="arrow_right_week">Объем \nправой ветки \nна этой неделе</string>
    <string name="shag_two">Шаг 2</string>
    <string name="vybor_paketa">Выбор пакета</string>
    <string name="back"><![CDATA[< Назад]]></string>
    <string name="detail_ticket">Детали билета</string>
    <string name="step_three">Шаг 3</string>
    <string name="step_four">Шаг 4</string>
    <string name="step_five">Шаг 5</string>
    <string name="vybor_tovara">Выбор товара</string>
    <string name="vybor_ofısa">Выбор офиса</string>
    <string name="cposob_oplaty"> Cпособ оплаты</string>
    <string name="available_products_from_">Доступные товары из </string>
    <string name="available_products_from"><b>“%1$s”</b></string>
    <string name="itogo_k_oplate">Итого к оплате : %1$.2f BV = %2$.2f KZT</string>
    <string name="vyberıte_blıjaıshıı_sklad">Выберите ближайший склад</string>
    <string name="office_sale">Офис-продаж</string>
    <string name="contacts_company">Казахстан, г.Алматы \n Жибек-Жолы 135 , 10 этаж 7 офис</string>
    <string name="contacts_office">Контакты офисов</string>
    <string name="office_gogol">Офис на Гоголя :</string>
    <string name="phone_number_one">+7 (747) 987 - 76 -88</string>
    <string name="office_zhibek_sholy">Офис на Жибек-Жолы:</string>
    <string name="phone_number_two">+7 (747) 987 - 76 -88 </string>
    <string name="office_abay">Офис на Абая:</string>
    <string name="phone_number_third">+7 (747) 987 - 76 -88</string>
    <string name="social_networking">Соцсети</string>
    <string name="random_test_text_company">-Это текст. Кликните дважды, чтобы отредактировать. Расскажите посетителям сайта о себе. Здесь будет удачно смотреться текст о вашей компании и услугах. Используйте эту возможность, чтобы выгодно представить себя и свою компанию клиентам.</string>
    <string name="profile">Профиль</string>
    <string name="office_name">Название офиса</string>
    <string name="city_name">Выберите город</string>
    <string name="phone_number_step_four_cardview">+7(747) 345 67 89</string>
    <string name="street_step_four_cardview">ул.Макатева 84</string>
    <string name="working_hours_step_four_cardview">Закроется в 21:00</string>
    <string name="oplata_cherez">Оплата через:</string>
    <string name="kassý">Кассу</string>
    <string name="bank_account_card">Банковская карта</string>
    <string name="bv">BV</string>
    <string name="submit">Подтвердить</string>
    <string name="vvedıte_dannye_karty">Введите данные карты:</string>
    <string name="imıa_na_karte">Имя на карте</string>
    <string name="input_name_in_credit_card">Ваше имя на карте</string>
    <string name="karta_deıstvıtelna">Карта действительна:</string>
    <string name="cvv_code">СVV код</string>
    <string name="hint_stars_for_card_nomber">************</string>
    <string name="vvedıte_nomer_karty">Введите номер карты</string>
    <string name="mm_string">MM</string>
    <string name="yy_string">YY</string>
    <string name="cvv_string">CVV</string>
    <string name="are_you_sure">Вы уверены?</string>
    <string name="text_error">Ошибка</string>
    <string name="text_success">Успешно</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Отмена</string>
    <string name="text_info">Инфо</string>
    <string name="text_yes">да</string>
    <string name="structure">Cтруктура</string>
    <string name="market">Маркет</string>
    <string name="company">Компания</string>
    <string name="about_company">О Компании</string>
    <string name="market_plan">Маркетинг план</string>
    <string name="сontacts">Контакты</string>
    <string name="wrong_phone_number">Неверный номер телефона</string>
    <string name="password_hint">*******</string>
    <string name="phone_mask_hint">+7 (_ _ _) _ _ _ _ _ _ _</string>
    <string name="attach_file">Прикрепить документ</string>
    <string name="rear_side">Передняя сторона</string>
    <string name="back_side">Задняя сторона</string>
    <string name="delete">Удалить</string>
    <string name="ten_thousand_bv">10000 BV</string>
    <string name="twelve_thousand_bv">12000 BV</string>
    <string name="two_thousand_bv">2000 BV</string>
    <string name="five_thousand_bv">5000 BVF</string>
    <string name="more_info"><u>подробнее</u></string>
    <string name="in_balance">На вашем балансе:</string>
    <string name="amount_bv">%1$.2f BV</string>
    <string name="amount_formatted">%1.2f</string>
    <string name="amountText_bv">%1$s BV</string>
    <string name="amount_kzt">%1$.2f KZT</string>
    <string name="amount_decimal_bv">%1d BV</string>
    <string name="amountText_kzt">%1$s KZT</string>
    <string name="amount_bv_string">%1$.2s BV</string>
    <string name="income">Доход</string>
    <string name="consumption">Расход</string>
    <string name="income_amount_bv">+%1$.2f BV</string>
    <string name="greeting_for_payment">Спасибо за оплату!</string>
    <string name="your_password_was_send_to">Ваш временный пароль \nотправлен на номер <b>%1$s</b></string>
    <string name="send_again_after">Отправить повторно через <b>%1$s секунд</b></string>
    <string name="send_again">Отправить повторно</string>
    <string name="come_up_to_till">Подойдите к кассе, чтобы оплатить \nи получить инструкцию \nдальнейших действий.</string>
    <string name="from_mail">От: %s</string>
    <string name="birthday">День рождения</string>
    <string name="birthday_two_dots">День рождения:</string>
    <string name="sponsor">Спонсор</string>
    <string name="password_two_dots">Пароль:</string>
    <string name="documents_scans">Сканы документов</string>
    <string name="go_to_market">Заказать товар</string>
    <string name="future_event">Узнайте о предстоящих мероприятиях!</string>
    <string name="future_events">Предстоящие мероприятия</string>
    <string name="buy_right_now">Успейте преобрести билеты сейчас!</string>
    <string name="payTo">К оплате: %1$.2fKZT</string>
    <string name="payToBV">К оплате: %1d BV</string>
    <string name="created_at">Дата заказа: %1$s</string>
    <string name="amount">Количество: %1d</string>
    <string name="detail_order">Детали заказа</string>
    <string name="count_adult">Количество(взрослый): %1d</string>
    <string name="count_child">Количество(детский): %1d</string>
    <string name="paid">Оплачено</string>
    <string name="no_paid">Не оплачено</string>
    <string name="order_number">Заказ #%1$.0f</string>
    <string name="ticket_number">Билет #%1d</string>
    <string name="code_order">Код товара: %1$.2f</string>
    <string name="total_amount"><![CDATA[<b>Общая сумма:</b>]]> %1$.2f KZT</string>
    <string name="type_of_payment"><![CDATA[<b>Способ оплаты:</b>]]> %1$s</string>
    <string name="type"><![CDATA[<b>Тип:</b>]]> %1$s</string>
    <string name="cashier">Кассир: %1$s</string>
    <string name="office"><![CDATA[<b>Офис:</b>]]> %1$s</string>
    <string name="contact_number"><![CDATA[<b>Телефон:</b>]]> %1$s</string>
    <string name="date_end_of_order"><![CDATA[<b>Дата завершения покупки:</b>]]> %1$s</string>
    <string name="info_order">Сведения о заказе</string>
    <string name="reply_order">Повторить заказ</string>
    <string name="repeat_orders">Повтор заказа #%1$.2f</string>
    <string name="success_order">Спасибо \n за покупку</string>
    <string name="go_to_cashbox">Подойдите к кассе, чтобы оплатить \n и получить инструкцию \n дальнейших действий.</string>
    <string name="exit">Выйти</string>
    <string name="delivery_address">Адрес доставки</string>
    <string name="fill_street_address">Укажите улицу/адрес:</string>
    <string name="available_delivery_type">Доступный вид доставки:</string>
    <string name="delivery_address_example">Например: Абая 45</string>
    <string name="fasten">Ускоренная</string>
    <string name="basic">Обычная</string>
    <string name="choose_delivery_service">Выберите вид доставки</string>
</resources>