<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sunlight_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:background="@drawable/ic_sunlightlogo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppCompatTextView"
            android:text="@string/login"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppCompatTextViewGray"
            android:layout_marginTop="@dimen/dimen_12dp"
            android:text="@string/login_welcome"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppCompatTextViewGray"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/enter_phone_number"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_l_et"
            style="@style/TextOutlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                style="@style/BasicEditText"
                android:hint="@string/phone_hint"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppCompatTextViewGray"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:text="@string/enter_password"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_l_et"
            style="@style/TextOutlined"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_18dp"
            app:hintEnabled="false"
            >
            
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:inputType="textPassword"
                style="@style/BasicEditText"
                android:hint="@string/password_hint"
                 />

        </com.google.android.material.textfield.TextInputLayout>
        
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_33dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AppCompatTextViewGray"
                android:text="@string/remember_me"
                />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppCompatTextViewGray"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:textColor="@color/sunLightColor"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/AppCompatButton"
            android:text="@string/enter"
            android:layout_marginTop="@dimen/dimen_32dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>