<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16dp">

        <ImageView
            android:id="@+id/arrow_bottom_sheet_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_16dp"
            android:contentDescription="@string/exit"
            android:src="@drawable/ic_arrow_sheet" />

        <TextView
            style="@style/AppCompatTextViewGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:textAlignment="center"
            android:textColor="@color/sunBlackColor"
            android:textSize="@dimen/dimen_18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppCompatTextViewGray"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/choose_country_two_dots"
            android:textSize="@dimen/dimen_16sp" />

        <TextView
            android:id="@+id/countryTextView"
            style="@style/AppCompatTextViewGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/sunlight_back_bordered_box"
            android:gravity="center_vertical"
            android:hint="@string/choose_country"
            android:padding="@dimen/dimen_12dp"
            android:textColorHint="@color/gray"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppCompatTextViewGray"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/choose_region_two_dots"
            android:textSize="@dimen/dimen_16sp" />

        <TextView
            android:id="@+id/regionsTextView"
            style="@style/AppCompatTextViewGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/sunlight_back_bordered_box"
            android:gravity="center_vertical"
            android:hint="@string/choose_region"
            android:padding="@dimen/dimen_12dp"
            android:textColorHint="@color/gray"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/AppCompatTextViewGray"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/choose_city_two_dots"
            android:textSize="@dimen/dimen_16sp" />

        <TextView
            android:id="@+id/citiesTextView"
            style="@style/AppCompatTextViewGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:background="@drawable/sunlight_back_bordered_box"
            android:gravity="center_vertical"
            android:hint="@string/choose_city_two_dots"
            android:padding="@dimen/dimen_12dp"
            android:textColorHint="@color/gray"
            app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_down" />

        <LinearLayout
            android:id="@+id/deliverServiceTypeLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/AppCompatTextViewGray"
                android:text="@string/choose_delivery_service"
                android:textSize="@dimen/dimen_16sp" />

            <RadioGroup
                android:id="@+id/deliveryServiceTypeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/deliveryFastenRadioButton"
                    style="@style/BasicRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fasten" />

                <RadioButton
                    android:id="@+id/deliveryDefaultRadioButton"
                    style="@style/BasicRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:text="@string/basic" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/deliverySectionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_18dp"
            android:orientation="vertical">

            <TextView
                style="@style/AppCompatTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_delivery_type"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen_14sp" />

            <LinearLayout
                android:id="@+id/deliveryTypeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:orientation="vertical" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextButton"
            style="@style/BasicMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_100dp"
            android:enabled="true"
            android:paddingTop="@dimen/dimen_16dp"
            android:paddingBottom="@dimen/dimen_16dp"
            android:text="@string/next"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="@style/BasicTextMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/back"
            android:textColor="@color/gray_textColor" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>